--- a/SHOW.html
+++ b/SHOW.html
@@ -63,10 +63,10 @@
 </head>
 <body>
     <h1>Kvastenspelen 2024</h1>
-	<p>Uppdaterad: 2024-10-09 08:22</p>
+	<p>Uppdaterad: 2024-10-09 14:26</p>
 	<h2>Pågående matcher</h2>
-    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Bana</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>1</td><td></td><td>  –  </td><td></td></tr> <tr><td>2</td><td>1</td><td>Richard Sauer –  Tjr</td><td>HS</td></tr> <tr><td>3</td><td>100</td><td>Michel Vries – Diederik Voort</td><td>HS</td></tr> <tr><td>4</td><td>101</td><td>Henk Schouten –  Uikg</td><td>HS</td></tr> </table>
+    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Bana</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>1</td><td></td><td>  –  </td><td></td></tr> <tr><td>2</td><td></td><td>  –  </td><td></td></tr> <tr><td>3</td><td></td><td>  –  </td><td></td></tr> <tr><td>4</td><td>1</td><td>Marc Hoekmans – Michel Vries</td><td>MS - 3</td></tr> </table>
 	<h2>Kommande matcher</h2>
-    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Tid</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>11:30</td><td>102</td><td>Diederik Voort –  Sdf</td><td>HS</td></tr> </table>
+    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Tid</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>11:30</td><td>1</td><td>David Bakker / Dik Velden – Erik Hansen / Marc Hoekmans</td><td>MD - 3</td></tr> <tr><td>12:45</td><td>2</td><td>Rogier Derksen / Michel Vries – Steven Bolker / Henk Schouten</td><td>MD - 3</td></tr> <tr><td>12:45</td><td>3</td><td>  –  </td><td>MD - 3</td></tr> </table>
 </body>
 </html>
