--- a/SHOW.html
+++ b/SHOW.html
@@ -62,11 +62,6 @@
     </style>
 </head>
 <body>
-    <h1>Kvastenspelen 2024</h1>
-	<p>Uppdaterad: 2024-10-09 14:26</p>
-	<h2>Pågående matcher</h2>
-    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Bana</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>1</td><td></td><td>  –  </td><td></td></tr> <tr><td>2</td><td></td><td>  –  </td><td></td></tr> <tr><td>3</td><td></td><td>  –  </td><td></td></tr> <tr><td>4</td><td>1</td><td>Marc Hoekmans – Michel Vries</td><td>MS - 3</td></tr> </table>
-	<h2>Kommande matcher</h2>
-    <table> <colgroup><col/><col/><col/><col/></colgroup> <tr><th>Tid</th><th>Matchnr</th><th>Spelare</th><th>Klass</th></tr> <tr><td>11:30</td><td>1</td><td>David Bakker / Dik Velden – Erik Hansen / Marc Hoekmans</td><td>MD - 3</td></tr> <tr><td>12:45</td><td>2</td><td>Rogier Derksen / Michel Vries – Steven Bolker / Henk Schouten</td><td>MD - 3</td></tr> <tr><td>12:45</td><td>3</td><td>  –  </td><td>MD - 3</td></tr> </table>
+    <iframe src="https://1drv.ms/t/s!AkQ26KjKC-oki6Iequ2g4CZl5KErVA?embed=1" width="98" height="120" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
