--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <p>Welcome to my GitHub Pages site! Test</p>
 </body>
 </html>
